# evidentlyai_learn

./: README.md  SERVICE.md  pyproject.toml
notebooks/: 00_csv_datadrift.ipynb
workspace/0197b288-1810-7d5a-bd04-18bf210dd574/: dashboard.json  metadata.json
workspace/0197b288-1810-7d5a-bd04-18bf210dd574/snapshots/: 0197b288-2229-74d5-80c5-72f24e8db7cd.json  0197b288-2599-767d-93e7-989c845c7d34.json  0197b288-2900-7bd9-993e-51147d447788.json  0197b288-2c8a-7f68-9f04-790a195b1054.json  0197b288-2fbd-7834-8138-c712d6cbcb00.json  0197b288-3394-76e5-a630-855fc3a1398e.json  0197b288-36d7-7711-8e7e-814bce737dce.json  0197b288-3ad6-7533-a328-f4e3e3c39852.json  0197b288-3e16-704c-848d-17714e59dfcf.json  0197b288-415c-7fef-bfff-f6d260f874a2.json  0197b288-4526-737a-a6ed-3989bad7f114.json  0197b288-4881-7b1a-8f44-69ef3270bba9.json  0197b288-4c6a-7882-a35c-87140fa2f108.json  0197b288-4fcd-7cb9-b662-7638ffee52c7.json  0197b288-5328-76c0-bf20-c4c2ab984e3d.json  0197b288-5737-7606-9590-0dc9384c21f0.json  0197b288-5a7e-7a06-9502-a6ffcf7cefc7.json  0197b288-5dd1-7ec5-b452-ae1e753b99a4.json  0197b288-60e9-7934-86a6-eb1b9721af69.json  0197b288-64ea-7534-9921-d0f6cf4eec40.json  0197b288-684b-77ef-8cd2-f4061cb54d7b.json  0197b288-6b90-75c1-ac00-fa41cbb0adff.json  0197b288-6ec4-782a-9663-67944cb7b2f0.json  0197b288-72cf-737c-878c-27804a6cec16.json  0197b288-7619-7d5f-8f03-b91e0aca597f.json  0197b288-7967-7e85-b0a4-df401271e06e.json  0197b288-7cad-77b6-b527-a5ada61a8753.json  (+1 more)
workspace/0197b28e-72cf-7f58-ba0f-610e9a2557d2/: dashboard.json  metadata.json
(+4 files in other folders)
